--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gulp-js-minify": "^0.0.3",
     "gulp-inline-css": "^3.3.0",
     "gulp-rigger": "^0.5.8",
-    "gulp-pagebuilder": "^0.1.4"
+    "gulp-pagebuilder": "^0.1.4",
+    "vue-slick": "^1.1.15"
   },
   "optionalDependencies": {
     "fsevents": "^1.1.2"
